[project]
name = "Agent-0.1"
version = "0.1.0"
description = "TODO"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.11.0",
    "tox>=4.0.0",
]

[tool.ruff]
line-length = 85
target-version = "py311"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
